# retirement-analysis

./: .gitignore  README.md  pyproject.toml
executions/3%_return/: exe_output.md
executions/6%_return/: exe_output.md  roth_conversion_detailed_results.csv  strategy_summary.csv
executions/monte_carlo_simulation/: monte_carlo_detailed_base_case.csv  monte_carlo_detailed_high_volatility.csv  monte_carlo_detailed_low_return.csv  monte_carlo_detailed_stagflation.csv  monte_carlo_summary.csv
executions/roth_conversion/3%_return/: roth_conversion_detailed_results.csv  strategy_summary.csv
src/retirement_analysis/: combined_analysis.py  main.py  monte_carlo_simulation.py
tests/: test_main.py  test_monte_carlo.py
